--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,7 +49,7 @@ jobs:
         with:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+        #run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Docker Build and Push
         uses: docker/build-push-action@v4
         with:
