--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,8 +3,7 @@ name: Builds and pushes tagged image to ECR and DockerHub
 
 on:
   push:
-    tags:
-      - "v*"
+    branches: [ "main" ]
 
 jobs:
   # build_push_ecr:
