--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,17 +38,17 @@ jobs:
   build_push_docker_hub:
     name: Push image Docker Hub
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Use Buildx to build image
-        uses: docker/setup-buildx-action@v2
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        #run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+    - uses: actions/checkout@v3
+    - name: Login Dockerhub
+      env:
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      
+    - name: Build the Docker image  
+      run: docker build --build-arg RUNNER_VERSION=2.319.1 -t supdude/gh-runner .
       - name: Docker Build and Push
         uses: docker/build-push-action@v4
         with:
