--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      
+    - uses: docker/setup-buildx-action@v2  
     - name: Build the Docker image  
       run: docker build --build-arg RUNNER_VERSION=2.319.1 -t supdude/gh-runner .
       - name: Docker Build and Push
